# geosampler

./: .gitignore  MANIFEST.in  README.md  VERSION  env.yml  env_dev.yml  mkdocs.yml  requirements.txt  setup.cfg
data/: convex_example_building.dbf  convex_example_building.shp  convex_example_building.shx  example_building.dbf  example_building.shp  example_building.shx  example_landcover.dbf  example_landcover.shx
docs/: index.md
geosampler/: __init__.py
geosampler/api/: sample.py  tile.py
geosampler/core/: sample.py  shape.py  tile.py  types.py
packaging/: doc_env.yml  package_env.yml  test_env.yml  test_requirements.txt
tests/api/: test_tile.py
tests/geosampler/: test_sampler.py  test_tiler.py
