[mypy]
ignore_missing_imports = True

[flake8]
ignore = D203
exclude = .*,__pycache__,docs/source/conf.py
max-line-length = 120

[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = geosampler
packages = find:
python_requires = >=3.9

[options.packages.find]
where = geosampler